Revelation changelog

---------------[ xxxx-xx-xx : 0.4.3 ]---------------

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* added quit button to unlock file dialog


---------------[ 2005-03-22 : 0.4.2 ]---------------

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* check for mkdict/packer under /sbin and /usr/sbin in
	addition to $PATH

	* don't use gtk.Action.set_sensitive() (API from gtk 2.6)

	* bumped version number to 0.4.2


---------------[ 2005-03-21 : 0.4.1 ]---------------

2005-03-21  Erik Grinaker <erikg@codepoet.no>

	* don't crash when closing non-modal dialog with escape

	* don't steal clipboard events from widgets in main window

2005-03-18  Erik Grinaker <erikg@codepoet.no>

	* left-align labels in link-buttons (for URLs etc)

	* workaround for gnome-python bug causing crashes on 64-bit
	systems when changing a preference

	* hide any open dialogs when locking the file

	* check generated passwords strength if length >= 8

	* use better lock icon

	* added a password checker dialog

	* use better stock icons for dialog buttons

	* added a more complete word-list

2005-03-17  Erik Grinaker <erikg@codepoet.no>

	* fix potential crash on quit with some pygtk versions

	* improve the user interface for copying username/password
	to clipboard

	* added preference to select doubleclick action; go to, or edit

	* cleaned up the build-system and source file layout

	* improved the preference dialog

	* don't crash when attempting to load missing icons

	* use fallback folder icons when not found in theme

	* update icons on theme change

	* bump version number to 0.4.1

2005-03-16  Erik Grinaker <erikg@codepoet.no>

	* make io.file_monitor() handle NotSupportedError from gnome-vfs

	* fixed crash when file saving fails (invalid permissions etc)

	* display non-ascii characters in filenames correctly

	* use correct encoding (utf-8, not iso-8859-1) in data files

	* workaround for files with incorrect encoding (generated by 0.4.0)
